--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arnarflow",
-  "version": "1.0.0",
+  "version": "1.3.0",
   "description": "Personal project management for Arnar",
   "main": "electron.js",
   "scripts": {
@@ -9,10 +9,12 @@
     "preview": "vite preview",
     "electron:dev": "concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
     "electron:build": "vite build && electron-builder",
+    "electron:publish": "vite build && electron-builder --publish always",
     "electron:preview": "electron ."
   },
   "dependencies": {
     "date-fns": "^2.30.0",
+    "electron-updater": "^6.1.7",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,6 +45,11 @@
     "win": {
       "target": "nsis",
       "icon": "public/icon.ico"
+    },
+    "publish": {
+      "provider": "github",
+      "owner": "arnar111",
+      "repo": "arnarflow"
     }
   }
 }
