Redesign ProjectView with futuristic Kanban board
Features:
- Kanban view with 3 columns: To Do, In Progress, Done
- Drag and drop tasks between columns
- List view toggle (Kanban/List)
- Glassmorphism cards with hover effects
- Progress bar with shimmer animation
- Per-column task counts
- Quick add form per column
- Priority badges with colors
- Auto-publish releases (no more drafts)

Inspired by Linear, Notion, and modern PM tools.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arnarflow",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "description": "Personal project management for Arnar",
   "main": "electron.js",
   "scripts": {
@@ -50,7 +50,8 @@
     "publish": {
       "provider": "github",
       "owner": "arnar111",
-      "repo": "arnarflow"
+      "repo": "arnarflow",
+      "releaseType": "release"
     }
   }
 }
