feat: ArnarFlow v4.0 → v4.3 - Major feature update
Version 4.0.0 - Productivity Suite:
- Pomodoro Timer with presets and notifications
- Daily Goals with progress rings
- Task Tags (17 colors, 8 defaults)
- Quick Capture Bar with smart parsing (#project @today !high)
- Confetti celebration effects

Version 4.1.0 - Focus & Organization:
- Weekly Review modal with stats comparison
- Focus History sidebar view
- Subtasks with checklist functionality
- CHANGELOG.md documentation

Version 4.2.0 - Analytics:
- StatsView dashboard with charts
- Key metrics (streak, completions, focus time)
- Project progress visualization

Version 4.3.0 - Notes & Polish:
- NotesView - daily journal feature
- Data Export/Import for backups
- Onboarding modal for new users
- Internationalization structure (i18n)
- Recurring tasks modal
- Landing page (landing.html)

All features fully integrated into store and navigation.
Ready for testing and production use.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arnarflow",
-  "version": "2.0.0",
+  "version": "4.4.0",
   "description": "Personal project management for Arnar",
   "main": "electron.js",
   "scripts": {
@@ -13,7 +13,7 @@
     "electron:preview": "electron ."
   },
   "dependencies": {
-    "date-fns": "^2.30.0",
+    "date-fns": "^3.6.0",
     "electron-log": "^5.0.0",
     "electron-updater": "^6.1.7",
     "lucide-react": "^0.294.0",
@@ -53,5 +53,8 @@
       "repo": "arnarflow",
       "releaseType": "release"
     }
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.57.1"
   }
 }
