--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "zustand": "^4.4.0"
   },
   "devDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.57.1",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
     "concurrently": "^9.2.1",
@@ -60,7 +61,9 @@
       "target": [
         {
           "target": "nsis",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         }
       ],
       "icon": "public/icon.ico"
