--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arnarflow",
-  "version": "5.4.5",
+  "version": "5.5.0",
   "description": "Personal project management for Arnar",
   "main": "electron.js",
   "scripts": {
@@ -67,6 +67,10 @@
         }
       ],
       "icon": "public/icon.ico"
+    },
+    "linux": {
+      "target": ["AppImage"],
+      "category": "Utility"
     },
     "asar": true,
     "asarUnpack": [],
